--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						5 – CSM</a></li>
 				<li><a href="blatt3/aufg1.html" target="_self">Aufgabe 5 -
 						Ideen</a></li>
-				<li><a href="blatt3/aufg1.html" target="_self">Aufgabe 5 -
+				<li><a href="https://github.com/BlackHole99/wawAufg5" target="_self">Aufgabe 5 -
 						Code</a></li>
 			</ul>
 
