--- a/blatt3/aufg1.html
+++ b/blatt3/aufg1.html
@@ -20,7 +20,7 @@
 				repräsentieren gleichzeitg meine Tabellenstruktur der Datenbank.
 				Darauf aufbauend entwickelte ich die Klasse CMS. Diese liest die
 				Tabellen der Datenbank aus und schreibt jene in Arrays mit Objekten
-				von Typ Menu sowie MenuItem. Die Methoden des CMS bauen aus den
+				vom Typ Menu sowie MenuItem. Die Methoden des CMS bauen aus den
 				Informationen die Menüs sowie den Content. Durch Überprüfungen
 				werden falsche Eingaben abgefangen.</p>
 		</div>
