--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
 			<ul>
 				<li><a href="unternehmen/index.php?id=1" target="_self">Aufgabe
 						5 – CSM</a></li>
-				<li><a href="blatt3/aufg1.html" target="_self">Aufgabe 5 -
-						Ideen</a></li>
-				<li><a href="https://github.com/BlackHole99/wawAufg5" target="_self">Aufgabe 5 -
+				<li><a href="blatt3/aufg1.html" target="_self">Aufgabe 5 – Ideen</a></li>
+				<li><a href="https://github.com/BlackHole99/wawAufg5" target="_self">Aufgabe 5 –
 						Code</a></li>
 			</ul>
 
